<resources>
    <string name="app_name">Lat2Ricky</string>
    <string name="username">Username</string>
    <string name="pwd">Password</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="fb">CONNECT WITH FACEBOOK</string>
    <string name="noacc">doesnt have account ?</string>

    <style name="regist">Register</style>

    <string name="almost">Almost There</string>
    <string name="ty">Thank you for registering with us. One More \n
    step, you need to check your email \n to activate your account
    </string>
    <string name="verify">VERIFY</string>
    <string name="verifyacc">Verify your Account</string>
    <string name="blood">Blood Type</string>
    <string name="reshus">Reshus</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="retype">Retype Password</string>
    <string name="personal">Personal</string>
    <string name="org">Organization</string>
    <string name="job">Job</string>
    <string name="addr">Home Address</string>
    <string name="loc">Default Location</string>
    <string name="agree">Agree with Terms and Conditions</string>
    <string name="regis">Register</string>
    <string name="sended">We have sended verification code to your email</string>
    <string name="enterverif">enter verification code here...</string>
    <string name="send">SEND</string>
    <string name="nocode">doesnt get the code?</string>
    <string name="searchD">Search Donor</string>
    <string name="searchN">Search donor near you</string>
    <string name="bloodN">Blood Needed</string>
    <string name="bloodA">4 Users need blood</string>
    <string name="msg">Message</string>
    <string name="msgA">5 New Messages</string>
    <string name="donorH">Donor History</string>
    <string name="donorA">5 Gives, 2 Received</string>
    <string name="nama">Ricky Yudha</string>
    <string name="bloodtypeout">Blood Type : B</string>
    <string name="bloodg">BLOOD GIVEN</string>
    <string name="bloodr">BLOOD RECEIVED</string>
    <string name="tyty">THANKS</string>
    <string-array name="bt">
        <item>Blood Type</item>
        <item>A</item>
        <item>B</item>
        <item>AB</item>
        <item>O</item>
    </string-array>
    <string-array name="resh">
        <item>Reshus</item>
        <item>+</item>
        <item>_</item>
    </string-array>
    <string-array name="job">
        <item>Job</item>
        <item>Entrepreneur</item>
        <item>Salaryman</item>
        <item>Freelancer</item>
        <item>others</item>
    </string-array>
</resources>
