<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyblue"
    android:padding="30dp"
    tools:context=".verify">

    <TextView
        android:id="@+id/verifyA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verifyacc"
        style="@style/bigtext"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/bigtexttop"
        android:layout_marginBottom="@dimen/bottom20pd"
        />
    <TextView
        android:id="@+id/sended"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sended"
        android:layout_below="@+id/verifyA"
        style="@style/smalltext"
        android:layout_marginBottom="40dp"
        />

    <EditText
        android:id="@+id/inputverif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enterverif"
        android:paddingBottom="@dimen/padfifteen"
        android:textSize="@dimen/padfifteen"
        android:textAlignment="center"
        android:backgroundTint="@color/whitetext"
        android:textColorHint="@color/whitetext"
        android:layout_below="@id/sended"
        android:layout_marginBottom="@dimen/bottom20pd"
        />
    <Button
        android:id="@+id/btnsend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:layout_below="@id/inputverif"
        android:background="@drawable/roundbutton"
        android:textColor="@color/whitetext"
        android:layout_marginBottom="@dimen/bottom20pd"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nocode"
        style="@style/smalltext"
        android:layout_below="@id/btnsend"
        />

</RelativeLayout>