<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/skyblue"
    android:padding="30dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        app:srcCompat="@drawable/ic_welcome_logo" />

    <EditText
        android:paddingBottom="@dimen/padfifteen"
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:backgroundTint="@color/whitetext"
        android:textColorHint="@color/whitetext"
        android:layout_below="@id/imageView2"
    />
    <EditText
        android:id="@+id/pwd"
        android:paddingBottom="@dimen/padfifteen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pwd"
        android:backgroundTint="@color/whitetext"
        android:textColorHint="@color/whitetext"
        android:layout_below="@id/username"
        android:layout_marginBottom="@dimen/bottom20pd"
        />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/pwd"
        android:background="@drawable/roundbutton"
        android:textColor="@color/whitetext"
        android:layout_marginBottom="@dimen/bottom20pd"
        />

    <TextView
        android:id="@+id/txtOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_below="@id/loginbutton"
        android:textColor="@color/whitetext"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_marginBottom="@dimen/bottom20pd"
        />
    <Button
        android:id="@+id/btnfb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_welcome_fb_login"
        android:paddingHorizontal="60dp"
        android:text="@string/fb"
        android:layout_below="@id/txtOr"
        android:background="@drawable/roundbutton"
        android:textColor="@color/whitetext"
        android:layout_marginBottom="@dimen/bottom20pd"
        />
    <TextView
        android:id="@+id/dasen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_below="@id/btnfb"
        android:text="@string/noacc"
        android:textAlignment="center"
        android:textColor="@color/whitetext"
        />

    <TextView
        android:id="@+id/regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnfb"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:clickable="true"
        android:layout_marginLeft="@dimen/bottom10pd"
        android:layout_toRightOf="@id/dasen"
        android:fontFamily="sans-serif-medium"
        android:text="@string/regis"
        android:textColor="@color/whitetext" />


</RelativeLayout>

