<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homeuser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@drawable/ic_header" />

            <ImageView
                android:id="@+id/garis3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_side_menu"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                />
            <ImageView
                android:id="@+id/bel"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_notification"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
            />
            <ImageView
                android:id="@+id/foto"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_below="@id/header"
                android:layout_centerInParent="true"
                android:layout_marginTop="-50dp"
                android:background="@drawable/fotorounded"
                android:padding="18dp"
                android:src="@drawable/ic_profile_default_small" />

        </RelativeLayout>

        <TextView
            android:id="@+id/nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/foto"
            android:text="@string/nama"
            android:textSize="@dimen/medtext"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/skyblue">
        </TextView>

        <TextView
            android:id="@+id/bloodtypeoutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nama"
            android:text="@string/bloodtypeout"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/strokegray"
            android:padding="@dimen/form">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textAlignment="center"
                    android:textColor="@color/skyblue"
                    android:textSize="@dimen/medtext"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bloodg"
                    android:textAlignment="center"
                    android:textColor="@color/grayform"
                    android:textSize="@dimen/smalltext" />

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:textAlignment="center"
                    android:textColor="@color/skyblue"
                    android:textSize="@dimen/medtext"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bloodr"
                    android:textAlignment="center"
                    android:textColor="@color/grayform"
                    android:textSize="@dimen/smalltext" />
            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="15"
                    android:textAlignment="center"
                    android:textColor="@color/skyblue"
                    android:textSize="@dimen/medtext"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tyty"
                    android:textAlignment="center"
                    android:textColor="@color/grayform"
                    android:textSize="@dimen/smalltext" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/magni"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/roundedbiru"
                        android:src="@drawable/ic_search_donor" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/searchD"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/searchN"
                        android:textSize="@dimen/smalltext"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/needppl"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:background="@drawable/roundedbiru"
                        android:src="@drawable/ic_blood_needed" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bloodN"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bloodA"
                        android:textSize="@dimen/smalltext"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/env"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/roundedbiru"
                        android:src="@drawable/ic_message" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/msg"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/msgA"
                        android:textSize="@dimen/smalltext"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/histo"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:background="@drawable/roundedbiru"
                        android:src="@drawable/ic_donor_history" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donorH"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donorA"
                        android:textSize="@dimen/smalltext"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>